--- a/WayPoint-BFA/appsettings.json
+++ b/WayPoint-BFA/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Waypoint;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=wp-dev4-db;Database=WayPoint;User Id=sa;Password=L0c4lADM!!;Persist Security Info=True;MultipleActiveResultSets=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
